Use consistent data for xembed SNI IDs

BUG: 356655